--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.application.name=PenguinPath
-spring.datasource.url=jdbc:mysql://localhost:3306/penguinpathtest?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.application.name=Backend
+# ==========================
+# Base de datos (MariaDB/MySQL local)
+# ==========================
+spring.datasource.url=jdbc:mysql://localhost:3306/penguin_path
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Opcional: Configuración de Hibernate/JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
