--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "ansi_up": "^6.0.6",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
