--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -1,17 +1,18 @@
-version: '3.8'
-
 services:
-  postgres:
-    image: postgres:16
-    restart: always
-    environment:
-      POSTGRES_USER: cris
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: PENGUINPATHDB
+  ubuntu-ssh:
+    image: ubuntu:22.04
+    container_name: ubuntu-ssh
     ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - "2222:22"
+    command: >
+      bash -c "
+        apt update &&
+        apt install -y openssh-server sudo &&
+        useradd -m devuser && echo 'devuser:1234' | chpasswd &&
+        mkdir -p /var/run/sshd &&
+        sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config &&
+        sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config &&
+        sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config &&
+        /usr/sbin/sshd -D
+      "
 
-volumes:
-  postgres_data:
