--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - penguin-network
 
   backend:
-    build: ./backend
+    build: .
     container_name: nest-backend
     ports:
       - "3000:3000"
