--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -25,11 +25,31 @@ services:
       - TARGET_HOST=ubuntu-service
       - TARGET_USER=devuser
       - TARGET_PASS=1234
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/sistema
     depends_on:
       - ubuntu-service
+      - postgres
+    networks:
+      - penguin-network
+
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: sistema
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     networks:
       - penguin-network
 
 networks:
   penguin-network:
     driver: bridge
+
+volumes:
+  pgdata:
+    driver: local
