feat: Enhance email service to support AWS SES alongside SendGrid for production

--- a/.env.production.example
+++ b/.env.production.example
@@ -9,8 +9,17 @@ POSTGRES_DB=penguinpath
 # JWT
 JWT_SECRET=TU_JWT_SECRET_SUPER_SEGURO_AQUI_MIN_32_CARACTERES
 
-# Email (opcional)
+# ===== Email (Opcional - elige UNA opción) =====
+# Opción 1: SendGrid (más fácil, 100 emails/día gratis)
 SENDGRID_API_KEY=
+
+# Opción 2: AWS SES (recomendado si usas EC2, 3000 emails/mes gratis)
+AWS_SES_SMTP_USER=
+AWS_SES_SMTP_PASSWORD=
+AWS_SES_SMTP_HOST=email-smtp.us-east-2.amazonaws.com
+AWS_SES_FROM_EMAIL=noreply@tu-dominio.com
+
+# Timeout de inactividad (milisegundos)
 
 # Frontend URL (para CORS)
 FRONTEND_URL=https://tu-dominio.com
