feat: add dynamic API URL configuration for frontend

--- a/.env.production.example
+++ b/.env.production.example
@@ -21,8 +21,11 @@ AWS_SES_FROM_EMAIL=noreply@tu-dominio.com
 
 # Timeout de inactividad (milisegundos)
 
-# Frontend URL (para CORS)
-FRONTEND_URL=https://tu-dominio.com
+# Frontend URL (para links de confirmación en emails)
+FRONTEND_URL=http://tu-ip-ec2
+
+# Backend URL (para que el frontend se conecte al backend)
+BACKEND_URL=http://tu-ip-ec2:3000
 
 # Timeout de inactividad (milisegundos)
 INACTIVITY_TIMEOUT=900000
