fix: specify env_file for docker-compose.prod.yml

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 
+# Especificar archivo de variables de entorno
+env_file:
+  - .env.production
+
 services:
   # Base de datos PostgreSQL
   postgres:
