--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -41,8 +41,9 @@ services:
       # Las variables AWS_SES_*, JWT_SECRET, FRONTEND_URL, etc. vienen del env_file
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:rw
-    ports:
-      - "3000:3000"
+    # Puerto 3000 NO expuesto externamente - solo accesible en red interna
+    expose:
+      - "3000"
     depends_on:
       postgres:
         condition: service_healthy
@@ -56,7 +57,8 @@ services:
       context: ./Frontend
       dockerfile: Dockerfile
       args:
-        VITE_API_URL: ${BACKEND_URL:-http://localhost:3000}
+        # En producción, el frontend usa /api que Nginx proxea a backend:3000
+        VITE_API_URL: /api
     container_name: penguinpath-frontend-prod
     env_file:
       - .env.production
