--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,6 +1,30 @@
+# ============================================
+# Redirección HTTP → HTTPS
+# ============================================
 server {
     listen 80;
-    server_name localhost;
+    server_name penguinpath.duckdns.org;
+
+    # Redirige todo el tráfico HTTP a HTTPS
+    return 301 https://$host$request_uri;
+}
+
+# ============================================
+# Servidor principal HTTPS
+# ============================================
+server {
+    listen 443 ssl;
+    server_name penguinpath.duckdns.org;
+
+    # Certificados SSL de Let's Encrypt (ajusta nombres si difieren)
+    ssl_certificate     /etc/nginx/ssl/fullchain2.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey2.pem;
+
+    # Mejores prácticas SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
     root /usr/share/nginx/html;
     index index.html;
 
@@ -11,13 +35,13 @@ server {
     gzip_proxied expired no-cache no-store private auth;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript application/json;
 
-    # Cache static assets
+    # Cache estática (1 año)
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy para el backend (API REST)
+    # Proxy para backend (NestJS)
     location /api/ {
         proxy_pass http://backend:3000/;
         proxy_http_version 1.1;
@@ -30,7 +54,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Proxy para WebSocket (Socket.IO)
+    # Proxy para WebSockets (Socket.IO)
     location /socket.io/ {
         proxy_pass http://backend:3000/socket.io/;
         proxy_http_version 1.1;
@@ -44,7 +68,7 @@ server {
         proxy_read_timeout 86400;
     }
 
-    # SPA fallback - todas las rutas van a index.html
+    # SPA fallback (Vue)
     location / {
         try_files $uri $uri/ /index.html;
     }
