--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
-    "build:prod": "vite build",
+    "build:prod": "vite build --force",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build"
