Fix Vite build - remove --force flag and clean cache dirs

--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -15,8 +15,8 @@ RUN pnpm install --frozen-lockfile
 # Copiar código fuente
 COPY . .
 
-# Limpiar caché de Vite
-RUN rm -rf node_modules/.vite
+# Limpiar cachés de build
+RUN rm -rf node_modules/.vite dist .vite
 
 # ARG para la URL del backend (se pasa en build time)
 ARG VITE_API_URL=http://localhost:3000
