--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -3,7 +3,7 @@
 # ============================================
 server {
     listen 80;
-    server_name penguinpath.duckdns.org;
+    server_name penguinpath.online www.penguinpath.online;
 
     # Redirige todo el tráfico HTTP a HTTPS
     return 301 https://$host$request_uri;
@@ -14,7 +14,7 @@ server {
 # ============================================
 server {
     listen 443 ssl;
-    server_name penguinpath.duckdns.org;
+    server_name penguinpath.online www.penguinpath.online;
 
     # Certificados SSL de Let's Encrypt (ajusta nombres si difieren)
     ssl_certificate     /etc/nginx/ssl/fullchain2.pem;
