Fix: configure nginx for Let's Encrypt challenges

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -5,8 +5,15 @@ server {
     listen 80;
     server_name penguinpath.online www.penguinpath.online;
 
-    # Redirige todo el tráfico HTTP a HTTPS
-    return 301 https://$host$request_uri;
+    # Permitir challenges de Let's Encrypt
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redirige el resto del tráfico HTTP a HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 # ============================================
