--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -23,9 +23,9 @@ server {
     listen 443 ssl;
     server_name penguinpath.online www.penguinpath.online;
 
-    # Certificados SSL de Let's Encrypt (ajusta nombres si difieren)
-    ssl_certificate     /etc/nginx/ssl/fullchain2.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey2.pem;
+    # Certificados SSL de Let's Encrypt
+    ssl_certificate     /etc/nginx/ssl/live/penguinpath.online/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/penguinpath.online/privkey.pem;
 
     # Mejores prácticas SSL
     ssl_protocols TLSv1.2 TLSv1.3;
