--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -53,11 +53,11 @@ services:
       - penguinpath-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+      test: ["CMD", "sh", "-c", "ps aux | grep -v grep | grep node || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   # Frontend Vue/Nginx
   frontend:
@@ -73,7 +73,7 @@ services:
       - "443:443"
     depends_on:
       backend:
-        condition: service_healthy
+        condition: service_started
       postgres:
         condition: service_healthy
     networks:
