Fix: add dynamic DNS resolution to nginx for Docker backend connectivity

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -35,6 +35,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Resolver DNS para Docker
+    resolver 127.0.0.11 valid=30s;
+
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -48,9 +51,10 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy para backend (NestJS)
+    # Proxy para backend (NestJS) con resolución dinámica
     location /api/ {
-        proxy_pass http://backend:3000/;
+        set $upstream backend:3000;
+        proxy_pass http://$upstream/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -59,11 +63,17 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # Timeouts y reintentos
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 10s;
+        proxy_read_timeout 10s;
     }
 
-    # Proxy para WebSockets (Socket.IO)
+    # Proxy para WebSockets (Socket.IO) con resolución dinámica
     location /socket.io/ {
-        proxy_pass http://backend:3000/socket.io/;
+        set $upstream backend:3000;
+        proxy_pass http://$upstream/socket.io/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -73,6 +83,10 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 86400;
+        
+        # Timeouts para WebSockets
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 10s;
     }
 
     # SPA fallback (Vue)
