--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -54,7 +54,7 @@ server {
     # Proxy para backend (NestJS) con resolución dinámica
     location /api/ {
         set $upstream backend:3000;
-        proxy_pass http://$upstream/;
+        proxy_pass http://$upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -63,6 +63,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # Reescribir la URL para quitar /api del path
+        rewrite ^/api/(.*)$ /$1 break;
         
         # Timeouts y reintentos
         proxy_connect_timeout 5s;
