--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -76,7 +76,7 @@ server {
     # Proxy para WebSockets (Socket.IO) con resolución dinámica
     location /socket.io/ {
         set $upstream backend:3000;
-        proxy_pass http://$upstream/socket.io/;
+        proxy_pass http://$upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -88,8 +88,13 @@ server {
         proxy_read_timeout 86400;
         
         # Timeouts para WebSockets
-        proxy_connect_timeout 5s;
-        proxy_send_timeout 10s;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        
+        # Headers adicionales para WebSocket
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_buffering off;
     }
 
     # SPA fallback (Vue)
