Add Docker installation script and Google site verification file
- Created a new HTML file for Google site verification.
- Added a comprehensive shell script for installing Docker Engine on Linux, including support for various distributions and versioning options.
- The script includes checks for existing installations, dependency management, and user prompts for installation confirmation.

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -3,7 +3,7 @@
 # ============================================
 server {
     listen 80;
-    server_name penguinpath.online www.penguinpath.online;
+    server_name penguinpath.duckdns.org;
 
     # Permitir challenges de Let's Encrypt
     location /.well-known/acme-challenge/ {
@@ -21,11 +21,11 @@ server {
 # ============================================
 server {
     listen 443 ssl;
-    server_name penguinpath.online www.penguinpath.online;
+    server_name penguinpath.duckdns.org;
 
     # Certificados SSL de Let's Encrypt
-    ssl_certificate     /etc/nginx/ssl/live/penguinpath.online/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/penguinpath.online/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/penguinpath.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/penguinpath.duckdns.org/privkey.pem;
 
     # Mejores prácticas SSL
     ssl_protocols TLSv1.2 TLSv1.3;
