--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,7 +25,9 @@
     "build:ubuntu-image": "docker build -f Dockerfile.ubuntu-user -t penguinpath-ubuntu:latest ."
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/mapped-types": "*",
@@ -35,7 +37,8 @@
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.6",
-    "@prisma/client": "6.17.1",
+    "@prisma/adapter-pg": "^6.0.0",
+    "@prisma/client": "^6.0.0",
     "@sendgrid/mail": "^8.1.6",
     "@types/socket.io": "^3.0.2",
     "bcrypt": "^6.0.0",
@@ -43,11 +46,13 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dockerode": "^4.0.9",
+    "dotenv": "^17.2.3",
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1"
@@ -62,9 +67,10 @@
     "@types/dockerode": "^3.3.31",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.19.1",
     "@types/nodemailer": "^7.0.2",
     "@types/passport-jwt": "^4.0.1",
+    "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -72,7 +78,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.17.1",
+    "prisma": "^6.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
