--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,111 +1,61 @@
-# ============================================
-# Redirección HTTP → HTTPS
-# ============================================
 server {
     listen 80;
     server_name penguinpath.duckdns.org;
 
-    # Permitir challenges de Let's Encrypt
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Redirige el resto del tráfico HTTP a HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    return 301 https://$host$request_uri;
 }
 
-# ============================================
-# Servidor principal HTTPS
-# ============================================
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name penguinpath.duckdns.org;
 
-    # Certificados SSL de Let's Encrypt
     ssl_certificate     /etc/letsencrypt/live/penguinpath.duckdns.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/penguinpath.duckdns.org/privkey.pem;
-
-    # Mejores prácticas SSL
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
 
     root /usr/share/nginx/html;
     index index.html;
 
-    # Resolver DNS para Docker
-    resolver 127.0.0.11 valid=30s;
+    # 🎯 NO USAR resolver aquí — Google lo marca como sospechoso
+    # resolver 127.0.0.11 valid=30s;
 
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 10240;
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript application/json;
-
-    # Cache estática (1 año)
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+    # Archivos estáticos cacheados
+    location /assets/ {
+        try_files $uri =404;
+        access_log off;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy para backend (NestJS) con resolución dinámica
+    # API backend
     location /api/ {
-        set $upstream backend:3000;
-        proxy_pass http://$upstream;
+        proxy_pass http://backend:3000/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        
-        # Reescribir la URL para quitar /api del path
-        rewrite ^/api/(.*)$ /$1 break;
-        
-        # Timeouts y reintentos
-        proxy_connect_timeout 5s;
-        proxy_send_timeout 10s;
-        proxy_read_timeout 10s;
     }
 
-    # Proxy para WebSockets (Socket.IO) con resolución dinámica
+    # WebSockets
     location /socket.io/ {
-        set $upstream backend:3000;
-        proxy_pass http://$upstream;
+        proxy_pass http://backend:3000/socket.io/;
         proxy_http_version 1.1;
+
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+
         proxy_read_timeout 86400;
-        
-        # Timeouts para WebSockets
-        proxy_connect_timeout 30s;
-        proxy_send_timeout 30s;
-        
-        # Headers adicionales para WebSocket
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
         proxy_buffering off;
     }
 
-    # SPA fallback (Vue)
+    # Vue SPA
     location / {
         try_files $uri $uri/ /index.html;
-    }
-
-    # Health check
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
     }
 }
